fixed some spacing

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@ body {
     background-attachment: fixed; 
     background-repeat: no-repeat;
 }
+
+.logo {
+    max-height: 17vw !important;
+}
